# missing-tree-detector

./: README.md
.github/workflows/: fly-deploy.yml
app/: .dockerignore  Dockerfile  README.md  fly.toml  gunicorn.conf.py  pyproject.toml
app/api/: main.py
app/api/clients/: aerobotics.py  aerobotics_impl.py
app/api/core/: config.py
app/api/orchards/: cache.py  model.py  router.py  service.py
app/api/orchards/missing_tree_detector/: detector.py  detector_impl.py
app/api/trees/: model.py  router.py  service.py
app/api/trees/missing_tree_detector/: detector_impl.py
app/tests/: test_detector_impl.py
notebooks/: fetch_tree_surveys.py  notebook.ipynb  pyproject.toml
