[project]
name = "api"
version = "0.1.0"
description = "FastAPI server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "loguru>=0.7.3",
    "httpx>=0.27.0",
    "utm>=0.7.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
prod = [
    "gunicorn>=26.0.0",
]
