[project]
name = "api"
version = "0.1.0"
description = "FastAPI server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "loguru>=0.7.3",
    "httpx>=0.27.0",
    "utm>=0.7.0",
    "pydantic-settings>=2.0.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "matplotlib-inline>=0.2.2",
]

[dependency-groups]
prod = [
    "gunicorn>=26.0.0",
]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
