[project]
name = "api"
version = "0.1.0"
description = "Missing Tree Detector API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "loguru>=0.7.3",
    "httpx>=0.27.0",
    "utm>=0.7.0",
    "pydantic-settings>=2.0.0",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
]

[dependency-groups]
prod = [
    "gunicorn>=26.0.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, B: bugbear, UP: pyupgrade
select = ["E", "W", "F", "I", "B", "UP"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends/Query/etc. are designed to be called in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.ruff.format]
quote-style = "double"
